Modified source to Java 8 standard to increase user compatibility.